# metal-candle

./: .cursorrules  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  BENCHMARKS.md  BENCHMARK_ACCURACY_ISSUES.md  BENCHMARK_CORRECTIONS_SUMMARY.md  CANDLE_AUTOGRAD_RESEARCH.md  CANDLE_VS_MLX_ANALYSIS.md  CHANGELOG.md  CLEANUP_COMPLETE_V1.0.md  CONTRIBUTING.md  CUSTOMOP_IMPLEMENTATION_STATUS.md  CUSTOMOP_READY_FOR_TESTING.md  Cargo.toml  DOCS_SETUP.md  DOCUMENTATION_FIXES_SUMMARY.md  DOCUMENTATION_REVIEW.md  DOCUMENTATION_VERIFICATION.md  EMBEDDINGS_STATUS.md  FERRIS_EMBEDDINGS_SUMMARY.md  FERRIS_MIGRATION_PROMPT.md  FERRIS_OPTIMIZATION_GUIDE.md  FINAL_RESULTS.md  FINAL_SESSION_SUMMARY_DEC9.md  FINAL_SUMMARY.md  GITHUB_PAGES_SETUP.md  HYBRID_METAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_FINAL.md  INTEGRATION_COMPLETE.md  INVESTIGATION_PLAN.md  ISSUE_7_COMPLETE.md  LAZY_VS_EAGER_RESULTS.md  LORA_OPTIMIZATION_STATUS.md  METAL_EMBEDDINGS_SUCCESS.md  METAL_LAYERNORM_WORKAROUND.md  MIGRATION_V1_TO_V2.md  MLX_ARCHITECTURE_ANALYSIS.md  MLX_BENCHMARK_COMPARISON.md  (+79 more)
.github/workflows/: benchmark-smoke.yml  ci.yml  doc-validation.yml  docs-check.yml  docs.yml
benches/: candle_baseline.rs  fused_lora_simple.rs  inference.rs  mps_simple.rs  streaming.rs  training.rs
benchmarks/: RESULTS.md  mlx_embeddings_bench.py  pytorch_embeddings_bench.py
docs/: BENCHMARK_CI.md  PR33_IMPLEMENTATION_SUMMARY.md  PROFILING_ANALYSIS_V1.4.0.md  README.md  RELEASE_PROCESS.md  book.toml
docs/src/: SUMMARY.md  first-example.md  installation.md  introduction.md  quick-start.md
examples/: adapter_swap_demo.rs  embeddings_demo.rs  ferris_hybrid_demo.rs  forward_pass.rs  generate_text.rs  inference_demo.rs  load_model.rs  metal_embeddings_test.rs  profile_benchmark.rs  rmsnorm_bench.rs  softmax_bench.rs  streaming_demo.rs  train_lora.rs
scripts/: run_official_benchmarks.sh  update-metrics.sh
src/: error.rs  lib.rs
src/backend/: custom_ops.rs  device.rs  metal_ops.rs  mod.rs  tensor.rs
src/embeddings/: bert.rs  loader.rs  metal_bert.rs  mod.rs
tests/: custom_ops_correctness.rs  executor_direct.rs  gradient_verification.rs  inference_integration.rs  lazy_execution.rs  lora_dropout.rs  models_integration.rs  rmsnorm_correctness.rs  softmax_correctness.rs  softmax_lazy.rs  training_integration.rs
(+53 files in other folders)
